- Fix crash due to race condition in logging initialization

BUG: 286597